--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Top Guru | Full Stack Developer</title>
+  <title>Victor Ciobanu | Full Stack Developer</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -128,7 +128,7 @@
 
   <header>
     <div>
-      <h1>Top <span>Guru</span></h1>
+      <h1>Victor <span>Ciobanu</span></h1>
       <h2>Full Stack Developer</h2>
       <p>I build modern, scalable, and responsive web applications.</p>
       <a href="#contact" class="btn">Contact Me</a>
@@ -137,7 +137,7 @@
 
   <section>
     <h2>About Me</h2>
-    <p>I am Top Guru, a passionate Full Stack Developer focused on performance and clean design.</p>
+    <p>I am Victor Ciobanu, a passionate Full Stack Developer focused on performance and clean design.</p>
   </section>
 
   <section>
@@ -168,13 +168,12 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: your-email@example.com</p>
-    <p>GitHub: github.com/yourusername</p>
-    <p>LinkedIn: linkedin.com/in/yourprofile</p>
+    <p>Email: vciobanu@axionco.com</p>
+    <p>GitHub: github.com/victorciobanuaxi</p>
   </section>
 
   <footer>
-    © 2025 Top Guru | Full Stack Developer
+    © 2025 Victor Ciobanu | Full Stack Developer
   </footer>
 
   <script>
