--- a/index.html
+++ b/index.html
@@ -1,186 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Victor Ciobanu | Full Stack Developer</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Victor Ciobanu | Full Stack Developer</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      --bg-color: #0f172a;
-      --card-color: #111827;
-      --text-color: #e5e7eb;
-      --accent: #38bdf8;
-    }
+<style>
+:root{
+  --bg:#0f172a;
+  --card:#111827;
+  --text:#e5e7eb;
+  --accent:#38bdf8;
+}
+body.light{
+  --bg:#f9fafb;
+  --card:#ffffff;
+  --text:#111827;
+  --accent:#2563eb;
+}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins}
+body{background:var(--bg);color:var(--text);transition:.4s}
+section{padding:4rem 1.5rem;max-width:1100px;margin:auto}
+h1,h2{text-align:center}
+h1 span{color:var(--accent)}
+p{text-align:center;max-width:700px;margin:1rem auto}
 
-    body.light {
-      --bg-color: #f9fafb;
-      --card-color: #ffffff;
-      --text-color: #111827;
-      --accent: #2563eb;
-    }
+.toggle{
+  position:fixed;top:20px;right:20px;
+  background:var(--card);padding:.5rem 1rem;
+  border-radius:20px;cursor:pointer;font-size:.8rem;
+}
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
+header{
+  min-height:100vh;
+  display:flex;align-items:center;justify-content:center;
+  text-align:center;
+  animation:fadeIn 1.2s ease;
+}
 
-    body {
-      background: var(--bg-color);
-      color: var(--text-color);
-      line-height: 1.6;
-      transition: background 0.4s, color 0.4s;
-    }
+.profile-pic{
+  width:150px;height:150px;
+  border-radius:50%;
+  border:4px solid var(--accent);
+  object-fit:cover;
+  margin-bottom:1rem;
+}
 
-    header {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 2rem;
-      animation: fadeIn 1.2s ease-in-out;
-    }
+.btn{
+  display:inline-block;margin-top:1.5rem;
+  padding:.7rem 1.5rem;
+  background:var(--accent);
+  color:white;border-radius:30px;
+  text-decoration:none;
+}
 
-    h1 {
-      font-size: 3rem;
-    }
+.card{
+  background:var(--card);
+  padding:1.5rem;border-radius:15px;
+  animation:slideUp 1s ease;
+}
 
-    h1 span {
-      color: var(--accent);
-    }
+/* Skill Bars */
+.skill{margin-bottom:1rem}
+.skill span{display:flex;justify-content:space-between}
+.bar{background:#1f2933;height:8px;border-radius:5px;margin-top:5px}
+.progress{height:8px;border-radius:5px;background:var(--accent)}
 
-    .btn {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 0.7rem 1.5rem;
-      background: var(--accent);
-      color: white;
-      border-radius: 30px;
-      text-decoration: none;
-      transition: transform 0.3s, opacity 0.3s;
-    }
+/* Timeline */
+.timeline{position:relative;margin-top:2rem}
+.timeline::before{
+  content:'';
+  position:absolute;left:50%;top:0;
+  width:3px;height:100%;
+  background:var(--accent);
+}
+.entry{
+  width:45%;padding:1rem;
+  background:var(--card);
+  border-radius:10px;
+  margin:1rem 0;
+}
+.left{margin-left:0}
+.right{margin-left:55%}
 
-    .btn:hover {
-      transform: translateY(-3px);
-      opacity: 0.9;
-    }
+footer{text-align:center;padding:2rem;opacity:.8}
 
-    section {
-      padding: 4rem 2rem;
-      max-width: 1100px;
-      margin: auto;
-    }
+@keyframes fadeIn{
+  from{opacity:0;transform:translateY(20px)}
+  to{opacity:1;transform:translateY(0)}
+}
+@keyframes slideUp{
+  from{opacity:0;transform:translateY(30px)}
+  to{opacity:1;transform:translateY(0)}
+}
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-    }
-
-    .card {
-      background: var(--card-color);
-      padding: 1.5rem;
-      border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      transition: transform 0.3s;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      opacity: 0.8;
-    }
-
-    .toggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      cursor: pointer;
-      background: var(--card-color);
-      padding: 0.5rem 1rem;
-      border-radius: 20px;
-      font-size: 0.8rem;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @media (max-width: 600px) {
-      h1 { font-size: 2.2rem; }
-    }
-  </style>
+@media(max-width:768px){
+  .timeline::before{left:10px}
+  .entry{width:100%;margin-left:20px}
+}
+</style>
 </head>
+
 <body>
 
-  <div class="toggle" onclick="toggleTheme()">Toggle Dark / Light</div>
+<div class="toggle" onclick="toggleTheme()">Dark / Light</div>
 
-  <header>
-    <div>
-      <h1>Victor <span>Ciobanu</span></h1>
-      <h2>Full Stack Developer</h2>
-      <p>I build modern, scalable, and responsive web applications.</p>
-      <a href="#contact" class="btn">Contact Me</a>
-    </div>
-  </header>
+<header>
+  <div>
+    <!-- Replace profile.png with your photo -->
+    <img src="profile.png" class="profile-pic" alt="Profile Photo">
+    <h1>Victor <span>Ciobanu</span></h1>
+    <h2>Full Stack Developer</h2>
+    <p>Building modern, scalable & responsive web applications</p>
+    <a href="#contact" class="btn">Hire Me</a>
+  </div>
+</header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>I am Victor Ciobanu, a passionate Full Stack Developer focused on performance and clean design.</p>
-  </section>
+<section>
+<h2>Skills</h2>
+<div class="card">
+  <div class="skill">
+    <span><b>HTML / CSS</b><b>100%</b></span>
+    <div class="bar"><div class="progress" style="width:100%"></div></div>
+  </div>
+  <div class="skill">
+    <span><b>JavaScript</b><b>100%</b></span>
+    <div class="bar"><div class="progress" style="width:100%"></div></div>
+  </div>
+  <div class="skill">
+    <span><b>React</b><b>100%</b></span>
+    <div class="bar"><div class="progress" style="width:100%"></div></div>
+  </div>
+  <div class="skill">
+    <span><b>Node.js</b><b>95%</b></span>
+    <div class="bar"><div class="progress" style="width:95%"></div></div>
+  </div>
+  <div class="skill">
+    <span><b>PHP</b><b>95%</b></span>
+    <div class="bar"><div class="progress" style="width:95%"></div></div>
+  </div>
+  <div class="skill">
+    <span><b>MongoDB</b><b>95%</b></span>
+    <div class="bar"><div class="progress" style="width:95%"></div></div>
+  </div>
+  <div class="skill">
+    <span><b>MySQL</b><b>95%</b></span>
+    <div class="bar"><div class="progress" style="width:95%"></div></div>
+  </div>
+</div>
+</section>
 
-  <section>
-    <h2>Skills</h2>
-    <div class="grid">
-      <div class="card">HTML, CSS, JavaScript</div>
-      <div class="card">React.js</div>
-      <div class="card">Node.js & Express</div>
-      <div class="card">MongoDB & MySQL</div>
-      <div class="card">Git & GitHub</div>
-      <div class="card">Deployment & DevOps Basics</div>
-    </div>
-  </section>
+<section>
+<h2>Experience</h2>
+<div class="timeline">
+  <div class="entry left">
+    <h3>2020 – Present</h3>
+    <p>Frontend Developer – Axion Communications</p>
+  </div>
+  <div class="entry right">
+    <h3>2016 – 2020</h3>
+    <p>Full-Stack Developer – Freelance & Projects</p>
+  </div>
+  <div class="entry left">
+    <h3>2014 – 2016</h3>
+    <p>Learning & Building Web Applications</p>
+  </div>
+</div>
+</section>
 
-  <section>
-    <h2>Projects</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>Portfolio Website</h3>
-        <p>Personal portfolio deployed on GitHub Pages.</p>
-      </div>
-      <div class="card">
-        <h3>Full Stack App</h3>
-        <p>Authentication-based MERN application.</p>
-      </div>
-    </div>
-  </section>
+<section id="contact">
+<h2>Contact</h2>
+<p>Email: vciobanu@axionco.com</p>
+<p>GitHub: github.com/victorciobanuaxi</p>
+</section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: vciobanu@axionco.com</p>
-    <p>GitHub: github.com/victorciobanuaxi</p>
-  </section>
+<footer>© 2025 Victor Ciobanu | Full Stack Developer</footer>
 
-  <footer>
-    © 2025 Victor Ciobanu | Full Stack Developer
-  </footer>
-
-  <script>
-    function toggleTheme() {
-      document.body.classList.toggle('light');
-    }
-  </script>
+<script>
+function toggleTheme(){
+  document.body.classList.toggle('light');
+}
+</script>
 
 </body>
 </html>
